# M3u8Preview_Go

./: .air.toml  .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  go.mod  go.sum  nginx.conf
.github/workflows/: docker-build.yml
cmd/server/: main.go
docs/: BUGFIX_FINAL_REPORT.md  BUG_ANALYSIS.md  CAPTCHA_SDK_HARDENING.md  FINGERPRINT_REDESIGN.md  MIGRATION_FROM_NODE.md  PROGRESS.md  PROGRESS_STAGE1_CRITICAL.md  PROGRESS_STAGE2_HIGH.md  PROGRESS_STAGE3_MEDIUM.md  PROGRESS_STAGE4_LOW.md  worker-protocol.md
internal/app/: admin_adapters.go  app.go
internal/config/: config.go  config_test.go
internal/db/: conn.go  migrate.go  seed.go
internal/dto/: admin.go  auth.go  common.go  import.go  media.go  response.go  subtitle.go
internal/handler/: admin.go  auth.go  auth_test.go  backup.go  category.go  favorite.go  health.go  helpers.go  import.go  media.go  playlist.go  proxy.go  subtitle.go  subtitle_worker.go  tag.go  upload.go  watch.go
internal/middleware/: auth.go  error.go  ratelimit.go  validator.go  worker_auth.go
internal/model/: enum.go  media.go  playlist.go  subtitle.go  subtitle_worker.go  system.go  user.go
internal/parser/: csv.go  excel.go  json.go  text.go
internal/service/: activity.go  admin.go  asr.go  audio_broker.go  audio_broker_test.go  auth.go  backup.go  captcha.go  category.go  favorite.go  import.go  media.go  (+11 more)
scripts/: diag-login.sh
web/: .gitignore  package.json
web/crypto-wasm/: .gitignore  Cargo.toml  README.md
web/crypto-wasm/src/: lib.rs
(+68 files in other folders)
